# UnityCarGRPC

./: .$BASE.drawio.bkp  .gitignore  BASE.drawio  LICENSE  README.md
python/: .pre-commit-config.yaml  README.md  conda_win.yml  pyproject.toml  requirements.txt  requirements_win.txt
python/grpc/: client.py  server.py  service_pb2.py  service_pb2_grpc.py
python/grpc/Protos/: greet.proto  greet_pb2.py  greet_pb2_grpc.py
python/grpc/car_communication/: client.py  config.py  dqn.py  logger.py  model.keras  server.py  units.py  web_service_api.py
python/grpc/car_communication/Protos/: car_communication.proto  car_communication_pb2.py  car_communication_pb2_grpc.py
python/grpc/car_communication/api/: web_service.py
python/grpc/car_communication/client/: __main__.py  data.py
python/grpc/car_communication/ddpg/: actor.py  agent.py  basemodel.py  buffer.py  critic.py  inputs.py  model_selector.py  noise.py  normalization.py  resnet.py  reward.py
python/grpc/car_communication/dqn/: __init__.py  agent.py  config.py  inputs.py  parameters.py  reward.py
python/grpc/car_communication/ml/: agent.py  basemodel.py  buffer.py  critic.py  inputs.py  normalization.py  resnet.py
python/grpc/car_communication/services/: graph_manager.py  route_manager.py  task_manager.py  video_manager.py
python/grpc/car_communication2/: client.py  config.py  server.py
python/grpc/car_communication2/Protos/: car_communication_pb2.py
python/grpc/greet/: client.py  server.py
python/grpc/greet/Protos/: greet.proto  greet_pb2.py  (+1 more)
python/grpc/stream_video/: client.py  server.py
(+111 files in other folders)
