[tool.poetry]
name = "grpc"
version = "0.1.0"
description = ""
authors = ["Max <avdeenkomaxim123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.2"
grpcio-tools = "^1.59.2"
opencv-python = "^4.8.1.78"
tensorflow = "^2.15.0.post1"
keras = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
