[tool.poetry]
name = "ddpg"
version = "0.1.0"
description = ""
authors = ["Max <avdeenkomaxim123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.2"
grpcio-tools = "^1.59.2"
opencv-python = "^4.8.1.78"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
