[tool.poetry]
name = "ucg"
version = "0.1.0"
description = ""
authors = ["Max <avdeyenko.max@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
numpy = "<2"
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"
opencv-python = "^4.10.0.84"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
